# shotgrid-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: actix-web-uploader.rs  delete-entity.rs  entity-activity-stream-read.rs  entity-field-upload-url-read.rs  entity-file-field-read.rs  entity-follow-update.rs  entity-followers-read.rs  entity-relationship-read.rs  entity-unfollow-update.rs  entity-upload-url-read.rs  info.rs  list-projects.rs  login.rs  preferences-read.rs  project-last-accessed-update.rs  read.rs  revive-entity.rs  schema-entity-read.rs  schema-field-create.rs  schema-field-delete.rs  schema-field-read.rs  schema-field-revive.rs  schema-field-update.rs  schema-fields-read.rs  schema-read.rs  summarize-child-tasks.rs  summarize-project-assets.rs  text-search.rs  thread-contents-read.rs  update-entity.rs  upload.rs  user-follows-read.rs  work-day-rules-read.rs
src/: entity_relationship_read.rs  filters.rs  lib.rs  schema.rs  search.rs  session.rs  structs.rs  summarize.rs  text_search.rs  types.rs  upload.rs
tests/: helpers.rs  integration_tests.rs
