[package]
name = "shotgun-rs"
version = "0.8.0"
authors = ["Owen Nelson <onelson@laika.com>", "Alex Widener <awidener@laika.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
log = "0.4.6"
reqwest = { version = "0.10.0", default-features = false, features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
rpassword = "3.0.2"
prettytable-rs = "0.8.0"
env_logger = "0.7.1"
serde_json = "1.0"
tokio = { version = "0.2.11", features = ["macros"] }

[features]
default = ["native-tls"]

gzip = ["reqwest/gzip"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls = ["reqwest/rustls-tls"]
