[package]
name = "shotgun-rs"
version = "0.9.0-alpha"
authors = [
    "Owen Nelson <onelson@laika.com>",
    "Alex Widener <awidener@laika.com>",
    "Marina Wilding <mwilding@laika.com>",
]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "0.5.6" # Match whatever reqwest is using
log = "0.4.6"
reqwest = { version = "0.10.9", default-features = false, features = ["json", "stream"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
mime_guess = "2.0"
futures = "0.3.8"
tokio = { version = "0.2", features = ["sync"] }
thiserror = "1.0"

[dev-dependencies]
rpassword = "3.0.2"
prettytable-rs = "0.8.0"
env_logger = "0.7"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
dotenv = "0.15"
wiremock = "0.4.0-alpha.2"
actix-multipart = "0.3.0"
actix-web = "3.3.2"
approx = "0.4.0"
doc-comment = "0.3.3"

[features]
default = ["native-tls"]

gzip = ["reqwest/gzip"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls = ["reqwest/rustls-tls"]

# Enable this to allow `cargo test` to run the integration tests.
# The integration tests also depend on having the following env vars set:
#
# - `TEST_SG_SERVER`, the shotgun server to connect to.
# - `TEST_SG_SCRIPT_NAME`, the name of an ApiUser to connect as.
# - `TEST_SG_SCRIPT_KEY`, the API key to go with the name.
# - `TEST_SG_HUMAN_USER_LOGIN`, certain tests require a `HumanUser` so this is
#   the login to "sudo as" for those tests.
# - `TEST_SG_PROJECT_ID`, some tests require a project to filter by.
integration-tests = []
